--- a/index.html
+++ b/index.html
@@ -3,32 +3,72 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>RJ पापड़ | Auto Save + Fullscreen Banner</title>
+<title>RJ पापड़ | Multilingual + Auto Save</title>
 
 <style>
-  /* Reset + Full Width Setup */
   * { margin: 0; padding: 0; box-sizing: border-box; }
   html, body {
     width: 100%;
-    overflow-x: hidden;
+    height: 100%;
     font-family: 'Noto Sans Devanagari', sans-serif;
     background: #fff8e1;
     color: #222;
+    overflow-x: hidden;
   }
 
-  /* Banner Fullscreen */
+  /* 🔶 Fullscreen Logo Section */
+  .logo-section {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    flex-direction: column;
+  }
+  .logo-section img {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+  }
+  .lang-buttons {
+    position: absolute;
+    bottom: 20px;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    width: 100%;
+  }
+  .lang-buttons button {
+    background: #ffc107;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 6px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  .lang-buttons button:hover {
+    background: #ffb300;
+  }
+
+  /* Content Section */
+  .content {
+    display: none;
+    text-align: center;
+  }
+  .active {
+    display: block;
+  }
+  h1 {
+    color: #c47f00;
+    margin-top: 15px;
+  }
+
   .banner {
     width: 100vw;
     height: auto;
     display: block;
     border-radius: 0;
-  }
-
-  h1 {
-    text-align: center;
-    color: #c47f00;
-    margin: 15px 0;
-    font-size: 24px;
   }
 
   form {
@@ -37,215 +77,131 @@
     margin: 20px auto;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
   }
-
   input {
     width: 100%;
     padding: 10px;
     margin: 8px 0;
     border: 1px solid #ccc;
     border-radius: 6px;
-    font-size: 15px;
   }
-
-  button {
+  button.save-btn {
     background: #ffc107;
     border: none;
     padding: 10px 20px;
     border-radius: 6px;
     font-weight: bold;
     cursor: pointer;
-    margin-top: 10px;
   }
-
-  button:hover {
+  button.save-btn:hover {
     background: #ffb300;
   }
-
-  .note {
-    font-size: 13px;
-    color: #555;
-    text-align: center;
-    margin-top: 8px;
-  }
-
   footer {
     text-align: center;
     font-size: 13px;
     color: #777;
-    margin: 15px 0;
+    margin: 20px 0;
   }
-
-  /* Admin Editor */
-  #editorWrap {
-    display: none;
-    max-width: 90%;
-    margin: 20px auto;
-    background: #fff;
-    border-radius: 10px;
-    padding: 15px;
-    box-shadow: 0 0 8px rgba(0,0,0,0.15);
-  }
-
-  textarea {
-    width: 100%;
-    height: 250px;
-    font-family: monospace;
-    font-size: 14px;
-    padding: 10px;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-  }
-
-  .control-btns {
-    text-align: center;
-    margin-top: 10px;
-  }
-
-  .control-btns button {
-    margin: 5px;
-  }
-
 </style>
 </head>
 
 <body>
 
-  <!-- 🔶 Top Banner -->
-  <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png" alt="Top Banner">
-
-  <h1>RJ पापड़ में आपका स्वागत है!</h1>
-
-  <!-- 🟡 Registration Form -->
-  <form id="regForm">
-    <input id="name" type="text" placeholder="नाम (वैकल्पिक)">
-    <input id="mobile" type="number" placeholder="मोबाइल नंबर (अनिवार्य)">
-    <button type="button" onclick="saveData()">💾 सेव करें</button>
-  </form>
-
-  <p class="note">यह फॉर्म अपने आप हर 5 सेकंड में सेव हो जाता है।</p>
-
-  <!-- 🧾 Admin Section -->
-  <div style="text-align:center; margin:20px 0;">
-    <button onclick="adminLogin()">🔐 Admin Login</button>
-    <button onclick="applySaved()">🔄 Apply Saved</button>
-    <button onclick="resetData()">♻️ Reset Default</button>
-  </div>
-
-  <!-- ✍️ Hidden Editor Box -->
-  <div id="editorWrap">
-    <h3>Admin Editor (HTML Content)</h3>
-    <textarea id="editor"></textarea>
-    <div class="control-btns">
-      <button onclick="saveEditor()">💾 Save</button>
-      <button onclick="applyEditor()">👁 Apply</button>
-      <button onclick="downloadHTML()">⬇️ Download</button>
-      <button onclick="closeEditor()">🔒 Close</button>
+  <!-- 🟢 Fullscreen Logo + Language Buttons -->
+  <div class="logo-section">
+    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png" alt="RJ Logo">
+    <div class="lang-buttons">
+      <button onclick="setLanguage('hi')">हिंदी</button>
+      <button onclick="setLanguage('en')">English</button>
+      <button onclick="setLanguage('gu')">ગુજરાતી</button>
     </div>
   </div>
 
-  <!-- 🔶 Bottom Banner -->
-  <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" alt="Bottom Banner">
+  <!-- 🔸 Content for Hindi -->
+  <div id="hi" class="content">
+    <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png" alt="Top Banner">
+    <h1>RJ पापड़ में आपका स्वागत है!</h1>
+    <form id="form-hi">
+      <input id="name-hi" type="text" placeholder="नाम (वैकल्पिक)">
+      <input id="mobile-hi" type="number" placeholder="मोबाइल नंबर (अनिवार्य)">
+      <button type="button" class="save-btn" onclick="saveForm('hi')">💾 सेव करें</button>
+    </form>
+    <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" alt="Bottom Banner">
+  </div>
 
-  <footer>© 2025 RJ पापड़ | Auto Save Edition</footer>
+  <!-- 🔸 Content for English -->
+  <div id="en" class="content">
+    <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png" alt="Top Banner">
+    <h1>Welcome to RJ Papad!</h1>
+    <form id="form-en">
+      <input id="name-en" type="text" placeholder="Name (Optional)">
+      <input id="mobile-en" type="number" placeholder="Mobile Number (Required)">
+      <button type="button" class="save-btn" onclick="saveForm('en')">💾 Save</button>
+    </form>
+    <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" alt="Bottom Banner">
+  </div>
+
+  <!-- 🔸 Content for Gujarati -->
+  <div id="gu" class="content">
+    <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png" alt="Top Banner">
+    <h1>RJ પાપડ માં આપનું સ્વાગત છે!</h1>
+    <form id="form-gu">
+      <input id="name-gu" type="text" placeholder="નામ (વૈકલ્પિક)">
+      <input id="mobile-gu" type="number" placeholder="મોબાઇલ નંબર (આવશ્યક)">
+      <button type="button" class="save-btn" onclick="saveForm('gu')">💾 સેવ કરો</button>
+    </form>
+    <img class="banner" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" alt="Bottom Banner">
+  </div>
+
+  <footer>© 2025 RJ Papad | Multilingual Auto Save Website</footer>
 
 <script>
-/* ===================
-   Auto Save System
-   =================== */
-const key = "rjpapad_form_data";
-const nameInput = document.getElementById("name");
-const mobileInput = document.getElementById("mobile");
+const STORAGE_KEY = "rjpapad_form_data";
 
-// लोड करें
-function loadData() {
-  const saved = localStorage.getItem(key);
-  if (saved) {
-    const data = JSON.parse(saved);
-    nameInput.value = data.name || "";
-    mobileInput.value = data.mobile || "";
-  }
+/* ✅ Auto Save + Language Switcher */
+function setLanguage(lang) {
+  localStorage.setItem("rjpapad_lang", lang);
+  document.querySelectorAll(".content").forEach(div => div.classList.remove("active"));
+  document.getElementById(lang).classList.add("active");
+  window.scrollTo({top: 0, behavior: "smooth"});
 }
 
-// सेव करें
-function saveData() {
-  const data = {
-    name: nameInput.value,
-    mobile: mobileInput.value
-  };
-  localStorage.setItem(key, JSON.stringify(data));
+/* 🔁 Load Last Selected Language */
+window.onload = () => {
+  const savedLang = localStorage.getItem("rjpapad_lang") || "hi";
+  setLanguage(savedLang);
+  loadForm(savedLang);
+};
+
+/* 💾 Save Form Data per Language */
+function saveForm(lang) {
+  const name = document.getElementById(`name-${lang}`).value;
+  const mobile = document.getElementById(`mobile-${lang}`).value;
+  let allData = JSON.parse(localStorage.getItem(STORAGE_KEY) || "{}");
+  allData[lang] = { name, mobile };
+  localStorage.setItem(STORAGE_KEY, JSON.stringify(allData));
   alert("✅ डेटा सेव हो गया!");
 }
 
-// हर 5 सेकंड में Auto Save
+/* ♻️ Load Saved Data Automatically */
+function loadForm(lang) {
+  const allData = JSON.parse(localStorage.getItem(STORAGE_KEY) || "{}");
+  if (allData[lang]) {
+    document.getElementById(`name-${lang}`).value = allData[lang].name || "";
+    document.getElementById(`mobile-${lang}`).value = allData[lang].mobile || "";
+  }
+}
+
+/* 🔄 Auto Save Every 5 Seconds */
 setInterval(() => {
-  const data = {
-    name: nameInput.value,
-    mobile: mobileInput.value
-  };
-  localStorage.setItem(key, JSON.stringify(data));
+  const currentLang = localStorage.getItem("rjpapad_lang") || "hi";
+  const name = document.getElementById(`name-${currentLang}`)?.value || "";
+  const mobile = document.getElementById(`mobile-${currentLang}`)?.value || "";
+  let allData = JSON.parse(localStorage.getItem(STORAGE_KEY) || "{}");
+  allData[currentLang] = { name, mobile };
+  localStorage.setItem(STORAGE_KEY, JSON.stringify(allData));
 }, 5000);
-
-window.onload = loadData;
-
-/* ===================
-   Admin Editor System
-   =================== */
-const editorWrap = document.getElementById("editorWrap");
-const editor = document.getElementById("editor");
-const editorKey = "rjpapad_editor_html";
-const ADMIN_PASS = "rjadmin123"; // 🔐 पासवर्ड बदलना चाहें तो यहीं बदलें
-
-function adminLogin() {
-  const pass = prompt("एडमिन पासवर्ड डालें:");
-  if (pass === ADMIN_PASS) {
-    const saved = localStorage.getItem(editorKey);
-    editor.value = saved || "<p>यहाँ HTML कंटेंट एडिट करें...</p>";
-    editorWrap.style.display = "block";
-  } else {
-    alert("❌ गलत पासवर्ड!");
-  }
-}
-
-function saveEditor() {
-  localStorage.setItem(editorKey, editor.value);
-  alert("💾 कंटेंट सेव हो गया (ब्राउज़र में)!");
-}
-
-function applyEditor() {
-  document.body.insertAdjacentHTML("beforeend", editor.value);
-  alert("👁 कंटेंट लाइव अप्लाई कर दिया गया!");
-}
-
-function closeEditor() {
-  editorWrap.style.display = "none";
-}
-
-function applySaved() {
-  const saved = localStorage.getItem(editorKey);
-  if (saved) document.body.insertAdjacentHTML("beforeend", saved);
-  else alert("कोई सेव किया हुआ कंटेंट नहीं मिला।");
-}
-
-function resetData() {
-  if (confirm("क्या आप सब कुछ डिफॉल्ट पर लाना चाहते हैं?")) {
-    localStorage.clear();
-    alert("♻️ सब कुछ डिफॉल्ट पर रीसेट कर दिया गया।");
-    location.reload();
-  }
-}
-
-function downloadHTML() {
-  const html = document.documentElement.outerHTML;
-  const blob = new Blob([html], {type: "text/html"});
-  const url = URL.createObjectURL(blob);
-  const a = document.createElement("a");
-  a.href = url;
-  a.download = "index.html";
-  a.click();
-  URL.revokeObjectURL(url);
-}
 </script>
 
 </body>
